# OptiProg03

./: .gitignore  Season12.txt  graph0.lgf
cpp/: CMakeLists.txt  Makefile  main.cpp
cpp/algorithms/: BipartiteMatchingAlgorithm.cpp  BipartiteMatchingAlgorithm.h  BipartitionAlgorithm.cpp  BipartitionAlgorithm.h  ChristofidesAlgorithm.cpp  ChristofidesAlgorithm.h  FootballBettingGameAlgorithm.cpp  FootballBettingGameAlgorithm.h
cpp/dataStructures/: FootballBettingGameSolution.cpp  FootballBettingGameSolution.h  FootballTeam.cpp  FootballTeam.h  Matchday.cpp  Matchday.h  NonBipartitionCertificate.cpp  NonBipartitionCertificate.h
cpp/io/: FootballBettingGameParser.cpp  FootballBettingGameParser.h
